--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
     <title>12bool</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box"> 1 coll </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
