add seconda e terza riga

--- a/index.html
+++ b/index.html
@@ -10,42 +10,64 @@
 </head>
 <body>
     <div class="container-fluid">
+        <!--prima riga-->
         <div class="row">
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
             </div>
             <div class="col-xs-1">
-                <div class="box"> 1 coll </div>
+                <div class="box"> 1 col </div>
+            </div>
+        </div>
+        <!--fine prima riga-->
+
+        <!--seconda riga-->
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">12 col</div>
+            </div>
+        </div>
+        <!--fine seconda riga-->
+
+        <div class="row">
+            <div class="col-xs-8">
+                <div class="box">8 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
             </div>
         </div>
     </div>
