add quarta riga

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
         <!--fine seconda riga-->
 
+        <!--terza riga-->
         <div class="row">
             <div class="col-xs-8">
                 <div class="box">8 col</div>
@@ -70,6 +71,29 @@
                 <div class="box">2 col</div>
             </div>
         </div>
+        <!--fine terza riga-->
+
+        <!--quarta riga-->
+        <div class="row">
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">6 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+        </div>
+        <!--fine quarta riga-->
+
+        <div></div>
     </div>
     
 </body>
