add responsive / end

--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
     <title>12bool</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid container">
         <!--prima riga-->
         <div class="row">
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
         </div>
@@ -61,53 +61,54 @@
 
         <!--terza riga-->
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-8 col-sm-12">
                 <div class="box">8 col</div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-2 col-sm-6">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-2 col-sm-6">
                 <div class="box">2 col</div>
             </div>
         </div>
         <!--fine terza riga-->
 
         <!--quarta riga-->
-        <div class="row">
-            <div class="col-xs-1">
+        <div class="row center-sm">
+            <div class="col-xs-1 col-sm-2">
                 <div class="box">1 col</div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-2 col-sm-4">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-2 col-sm-4">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-sm-12">
                 <div class="box">6 col</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-4">
                 <div class="box">1 col</div>
             </div>
         </div>
         <!--fine quarta riga-->
 
+        <!--quinta riga-->
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-sm-12">
                 <div class="box">
-                    <div class="box-nested col-xs-2">
+                    <div class="box-nested col-xs-2 col-sm-6">
                         Nested 2 col
                     </div>
-                    <div class="box-nested col-xs-2">
+                    <div class="box-nested col-xs-2 col-sm-6">
                         Nested 2 col
                     </div>
-                    <div class="box-nested col-xs-8">
+                    <div class="box-nested col-xs-8 col-sm-12">
                         Nested 8 col
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-sm-12">
                 <div class="box">
                     <div class="box-nested col-xs-6">
                         Nested 6 col
@@ -118,6 +119,7 @@
                 </div>
             </div>
         </div>
+        <!--fine quinta riga-->
     </div>
     
 </body>
