--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
     <div class="container-fluid container">
         <!--prima riga-->
         <div class="row">
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
-            <div class="col-xs-1 col-sm-12">
+            <div class="col-lg-1 col-sm-12">
                 <div class="box"> 1 col </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
 
         <!--seconda riga-->
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-lg-12 col-sm-12">
                 <div class="box">12 col</div>
             </div>
         </div>
@@ -61,13 +61,13 @@
 
         <!--terza riga-->
         <div class="row">
-            <div class="col-xs-8 col-sm-12">
+            <div class="col-lg-8 col-sm-12">
                 <div class="box">8 col</div>
             </div>
-            <div class="col-xs-2 col-sm-6">
+            <div class="col-lg-2 col-sm-6">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-2 col-sm-6">
+            <div class="col-lg-2 col-sm-6">
                 <div class="box">2 col</div>
             </div>
         </div>
@@ -75,19 +75,19 @@
 
         <!--quarta riga-->
         <div class="row center-sm">
-            <div class="col-xs-1 col-sm-2">
+            <div class="col-lg-1 col-sm-2">
                 <div class="box">1 col</div>
             </div>
-            <div class="col-xs-2 col-sm-4">
+            <div class="col-lg-2 col-sm-4">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-2 col-sm-4">
+            <div class="col-lg-2 col-sm-4">
                 <div class="box">2 col</div>
             </div>
-            <div class="col-xs-6 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
                 <div class="box">6 col</div>
             </div>
-            <div class="col-xs-1 col-sm-4">
+            <div class="col-lg-1 col-sm-4">
                 <div class="box">1 col</div>
             </div>
         </div>
@@ -95,25 +95,25 @@
 
         <!--quinta riga-->
         <div class="row">
-            <div class="col-xs-6 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
                 <div class="box">
-                    <div class="box-nested col-xs-2 col-sm-6">
+                    <div class="box-nested col-lg-2 col-sm-6">
                         Nested 2 col
                     </div>
-                    <div class="box-nested col-xs-2 col-sm-6">
+                    <div class="box-nested col-lg-2 col-sm-6">
                         Nested 2 col
                     </div>
-                    <div class="box-nested col-xs-8 col-sm-12">
+                    <div class="box-nested col-lg-8 col-sm-12">
                         Nested 8 col
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
                 <div class="box">
-                    <div class="box-nested col-xs-6">
+                    <div class="box-nested col-lg-6 col-sm-6">
                         Nested 6 col
                     </div>
-                    <div class="box-nested col-xs-6">
+                    <div class="box-nested col-lg-6 col-sm-6">
                         Nested 6 col
                     </div>
                 </div>
